src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700;800&display=swap");

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Calibri", "Segoe UI",
    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
    "Helvetica Neue", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  height: 100%;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.App {
  text-align: center;
  /*margin: 10px;*/
  display: flex;
  /* width: 100%; */
  height: 100%;
}

.form {
  /* float: left;  */
  width: 100%;
  min-height: 100%;
  overflow: hidden;
  font-family: "Poppins";
  padding-right: 80px;
  box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.3);
  z-index: 1;
  background-color: #f6f4f2;
}

.resume {
  /*border: lightgrey 1px groove; */
  /* float: right;  */
  background-color: white;
  /* width: 45%; */
  /* width needs to be at 100% for it to take up the entire width of the page when donloading */
  width: 100%;
  min-height: 100%;
  overflow: hidden;
  padding: 20px;
  margin-right: 0px;
  font-family: "Poppins";
  color: #424242;
}

.header {
  margin-left: 20px;
  margin-right: 50px;
  display: inline;
}

.fullName {
  float: left;
  font-size: 18px;
}

.personalDetails {
  float: right;
  font-size: 12px;
  line-height: 12px;
  padding: 0;
  margin: 0;
  text-align: right;
}

.dropdown {
  width: 73%;
  margin-right: 135px;
}

.firstLine {
  border-bottom: black 0.5px solid;
  margin-bottom: 0;
  margin-left: 20px;
  margin-right: 50px;
}

.resumeDetails {
  display: flex;
  flex-direction: column;
  font-size: 12px;
}

.educationHeader {
  margin-left: 20px;
  margin-top: 0;
}

h2 {
  text-align: left;
  font-size: 20px;
}

/* Styling for the Email, Phone number, Location, and Portifolio elements */
h3 {
  font-weight: 500;
}

h3:nth-child(4) {
  margin-top: 24px;
  text-decoration: underline;
  color: skyblue;
}

h4 {
  font-weight: 500;
}

.education {
  display: flex;
  flex-direction: inherit;
}

.schoolName {
  position: relative;
  display: inline;
  margin-left: 20px;
  flex-direction: left;
  text-align: left;
  line-height: 8px;
}

#scoolName {
  margin-bottom: 5px;
  margin-left: 20px;
  float: left;
  font-size: 14px;
}

#schoolLocation {
  margin-left: 20px;
  float: right;
  margin-right: 50px;
  font-size: 13px;
}

#graduation {
  margin-left: 20px;
  float: right;
  margin-right: 50px;
  font-size: 13px;
}

#degree {
  margin-bottom: 20px;
  margin-left: 20px;
  float: left;
  font-size: 13px;
}

#major {
  margin-top: 20px;
  margin-left: -117px;
  float: left;
  font-size: 13px;
}

.workExpHeader {
  margin-left: 20px;
  margin-top: 0;
  font-size: 14px;
  margin-bottom: -20px;
}

.expLeft {
  position: relative;
  float: left;
  margin-top: 20px;
  margin-right: 50px;
  font-size: 13px;
  line-height: 32px;
  text-align: left;
  display: block;
}

#responsibilities {
  clear: right;
  margin-top: 20px;
  padding-left: 20px;
  text-align: left;
  font-size: 13px;
}

.exps {
  display: flex;
  flex-direction: column;
  margin-left: 20px;
  margin-right: 50px;
}

.projectsHeader {
  margin-left: 20px;
  margin-top: 0;
}

.projects {
  display: flex;
  flex-direction: column;
  margin-left: 20px;
  margin-right: 50px;
}

#description {
  clear: right;
  margin-top: 20px;
  padding-left: 20px;
  text-align: left;
  font-size: 13px;
}

.relcourse {
  text-align: center;
}

#title {
  font-size: 13px;
  line-height: 32px;
  float: left;
}

#link {
  text-decoration: underline;
  color: skyblue;
  line-height: 32px;
  margin-right: 20px;
  font-size: 13px;
  float: right;
}

